kubernetes/http-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-api-service
  labels:
    app: node-api-demo-app
spec:
  type: NodePort
  selector:
    app: node-api-demo-app
    component: http-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
