kubernetes/http-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-api-ingress
  labels:
    app: node-api-demo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: http-api.node-api-demo-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-api-service
                port:
                  number: 3001
